name: ethereum-query
version: 0.0.1
cabal-version: >=1.10
build-type: Simple
author: Jamshid
license-file:  LICENSE
maintainer:    jamshidnh@gmail.com
synopsis: A Haskell version of an Ethereum client
category:      Data Structures
license: BSD3
description:  
	      Tool to query the ethereum databases

source-repository this
  type:     git
  location: https://github.com/jamshidh/ethereum-client-haskell
  branch:   master
  tag:      v0.0.4

executable queryEth
    default-language: Haskell98
    build-depends: 
                   base >= 4 && < 5
                 , ansi-wl-pprint
                 , cmdargs
                 , cryptohash
                 , binary
                 , bytestring
                 , containers
                 , ethereum-rlp
                 , ethereum-merkle-patricia-db
                 , filepath
                 , time
                 , nibblestring
                 , haskoin
                 , base16-bytestring
                 , mtl
                 , network
                 , transformers
                 , resourcet
                 , data-default
                 , leveldb-haskell
                 , array
                 , directory
                 , ethereum-client-haskell
    main-is: Main.hs
    other-modules:
                   Block
                   Code
                   DumpLevelDB
                   Init
                   Raw
                   RLP
                   State
    buildable: True
    hs-source-dirs: src

